--- a/sc_app/static/dashboard/mystyle.css
+++ b/sc_app/static/dashboard/mystyle.css
@@ -1,7 +1,26 @@
+/* OVERALL DOCUMENT SECTION */
+
+body, html {
+  height: 100%;
+  margin: 0;
+}
+
 body {
-  background: url("/static/images/backpacker.jpg") 50% 0 no-repeat fixed;
-    height: 650px;
-    padding: 100px 0 0 0;
+  padding-top: 100px;
+  background: url("/static/images/mountainview.jpg") no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+nav {
+  height: 90px;
+  margin-bottom: 30px;
+  padding: 20px;
 }
 
 h1 {
@@ -17,24 +36,59 @@ h3 {
   margin: 20px auto 20px auto;
 }
 
+
+
+/* LOGIN PAGE SECTION */
+
+#loginform {
+  width: 50%;
+  background-color: white;
+  opacity: 85%;
+  border: 1px solid black;
+  margin: 20px auto 20px auto;
+  padding: 30px;
+  text-align: center;
+}
+
+#loginform p {
+  padding: 5px;
+  font-weight:600;
+}
+
+#loginform label {
+  padding: 10px;
+  font-weight:600;
+}
+
+#loginform h3 {
+  padding: 0px auto 30px auto;
+  margin-bottom: 40px;
+}
+
+
+
+
+/* DASHBOARD CSS SECTION  */
+
 #faqbutton {
   color: navy;
 }
 
 #totalpanel {
   background-color: white;
-  border: 2px solid black;
+  opacity: 85%;
+  border: 1px solid black;
 }
 
 #clientdetails {
-  border: 2px solid black;
+  border: 1px solid black;
   margin: 10px auto 10px auto;
   padding-top: 10px;
 
 }
 
 #clientdetails table {
-  border: 2px solid black;
+  border: 1px solid black;
   text-align: center;
   margin: auto;
   width: 80%;
@@ -64,5 +118,6 @@ h3 {
   padding: 2px;
   margin: 10px auto 10px auto;
   text-align: center;
-  border: 2px solid black;
+  opacity: 85%;
+  border: 1px solid black;
 }
