--- a/sc_app/templates/base.html
+++ b/sc_app/templates/base.html
@@ -14,6 +14,15 @@
   <body>
     {% include 'navbar.html' %}
     <div class="container-fluid">
+
+      {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-{{ message.tags }}">
+            {{ message }}
+          </div>
+        {% endfor %}
+      {% endif %}
+      
       {% block content %}
 
       {% endblock %}
