--- a/sc_app/templates/navbar.html
+++ b/sc_app/templates/navbar.html
@@ -1,17 +1,39 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">Snowball Creations Client Hub</a>
+{% load static %}
+<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+  {% if user.is_authenticated %}
+  <a class="navbar-brand" href="{% url 'dashboard' %}">
+    <img src="{% static "/images/snowballlogotemp2.png" %}" width="auto" height="80" alt="logo">
+  </a>
+  {% else %}
+  <a class="navbar-brand" href="{% url 'login' %}">
+    <img src="{% static "/images/snowballlogotemp2.png" %}" width="auto" height="80" alt="logo">
+  </a>
+  {% endif %}
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
-      </li>
+      {% if user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
+        </li>
+      {% endif %}
       <li class="nav-item">
         <a class="nav-link" href="https://wearethenatureboys.com/">Back to main website</a>
       </li>
+    </ul>
+    <ul class="navbar-nav">
+      {% if user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+        </li>
+      {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'login' %}">Login</a>
+        </li>
+      {% endif %}
     </ul>
   </div>
 </nav>
