--- a/sc_app/static/dashboard/mystyle.css
+++ b/sc_app/static/dashboard/mystyle.css
@@ -95,9 +95,20 @@ h3 {
   margin: 10px auto 20px auto;
 }
 
+#subscription-list {
+  border: 10px 0px 10px 0px;
+  padding: 7px;
+}
+
 #resourceandappcardtext {
   margin-bottom: 5px;
   padding-bottom: 10px;
+}
+
+
+#resourceslist {
+  width: 100%;
+  padding: 0px;
 }
 
 #resourcesandapps a {
@@ -120,4 +131,16 @@ h3 {
   text-align: center;
   opacity: 85%;
   border: 1px solid black;
+}
+
+#faqbutton {
+  fill: currentColor;
+  transition: 0.6s ease-in-out;
+}
+
+
+#faqbutton:hover {
+  transform: translateX(-8px);
+  fill: #319795;
+  transition: 0.6s ease-in-out;
 }
