--- a/sc_app/templates/dashboard/dashboard.html
+++ b/sc_app/templates/dashboard/dashboard.html
@@ -8,7 +8,7 @@
 
 <div class="container" id="totalpanel">
   <div class="container" id="clientdetails">
-    <h3>{{ user.userprofile.company.name }}'s details</h3>
+    <h3>{{ request.user.userprofile.company.name }}'s details</h3>
     <div class="row">
       <div class="col col-4 mx-auto">
         <p><strong>Company: </strong><br>{{ user.userprofile.company.name }}</p>
