--- a/sc_app/static/dashboard/mystyle.css
+++ b/sc_app/static/dashboard/mystyle.css
@@ -133,6 +133,14 @@ h3 {
   border: 1px solid black;
 }
 
+#faq-text {
+  width: 90%;
+  padding: 2px;
+  margin: 10px auto 10px auto;
+  text-align: left;
+  opacity: 85%;
+}
+
 #faqbutton {
   fill: currentColor;
   transition: 0.6s ease-in-out;
