--- a/sc_app/templates/dashboard/snippets/faq.html
+++ b/sc_app/templates/dashboard/snippets/faq.html
@@ -1,16 +1,161 @@
-<div class="accordion" id="accordionExample">
-  <div class="card">
-    <div class="card-header" id="headingOne">
-      <h2 class="mb-0">
-        <button id='faqbutton' class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          How to get in touch
-        </button>
-      </h2>
-    </div>
+<div class="container" id="clientdetails">
+  <h3>FAQs</h3>
 
-    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-      <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+  <div class="accordion" id="accordionExample">
+    <div class="accordion" id="accordionExample">
+      <div class="card">
+        <div class="card-header" id="headingOne">
+          <h2 class="mb-0">
+            <button id='faqbutton' class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              How can I get in touch?
+            </button>
+          </h2>
+        </div>
+        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+          <div class="card-body" id="faq-text">
+            Best thing to do is email georgia@wearethenatureboys.com
+            <br><br>Or if you’re looking to have a larger discussion about anything like say you’re interested in a service
+            like our competitions, FB & Insta paid ads management or Linkedin Lead Gen, then you can book a call here:<br><br> <a href="https://calendly.com/thenatureboys/social-support" target="_blank">Nature Boys Calendar</a>
+          </div>
+        </div>
+      </div>
+
+    <div class="card">
+      <div class="card-header" id="headingTwo">
+        <h2 class="mb-0">
+          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            Do you guys offer a referral bonus if I send a friend your way?
+          </button>
+        </h2>
+      </div>
+      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+        <div class="card-body" id="faq-text">
+          For sure! We’re a young business still so it helps a lot when our clients sing our praises to others so we’re
+          very happy to reward you! For any client you refer, we’re happy to give 30% of their first month’s payment as a bonus
+          for any subscription service once they go on to month two! <br><br>Packages with us range from £79 to £8,000 so you
+          could make £23 - £2,400 in a single referral! <br><br>Simply CC us into an email with them introducing us and a bit about them and we can take it over from there!
+        </div>
       </div>
     </div>
+
+    <div class="card">
+      <div class="card-header" id="headingThree">
+        <h2 class="mb-0">
+          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            What is the difference between Instagram Centred and Email Database Centred Competition?
+          </button>
+        </h2>
+      </div>
+      <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+        <div class="card-body" id="faq-text">
+          Our Instagram centred competitions are focused purely on that one platform where we look to manage
+          regular competitions on the platform with the goal of gaining followers. <br><br>The email centred campaigns are
+          an upgrade ontop of that where we use Vyper, a viral competition software that allows you to build an email
+          list extremely quickly as well as growing on social media too! You can read more on the two of them here:<br><br> <a href="https://wearethenatureboys.com/organic-social/#competitionpart" target="_blank">Competitions info</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-header" id="headingFour">
+        <h2 class="mb-0">
+          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+            How can I increase the number of my followers?
+          </button>
+        </h2>
+      </div>
+      <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
+        <div class="card-body" id="faq-text">
+          There are many ways to improve your follower growth. We have professional tools like the competitions to
+          help accelerate that growth significantly. <br><br>However we also put together a guide for all paying clients with
+          a whole list of strategies that you can see above in the training document links.
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-header" id="headingFive">
+        <h2 class="mb-0">
+          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+            How does the engagement pod deliver likes?
+          </button>
+        </h2>
+      </div>
+      <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
+        <div class="card-body" id="faq-text">
+          The engagement pod uses an extremely advanced algorithm with an aim to mimic the natural engagement a real
+          audience would deliver. <br><br>So once you post a new picture or video your post will be picked up relatively quickly
+          and an initial few hundred likes will be sent. Then gradually over the rest of the next 24 hours the rest of the
+          400-600 likes will come in.
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-header" id="headingSix">
+        <h2 class="mb-0">
+          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+            My post has gone live and i’ve not had the engagement pod send the likes yet. What do I do?
+          </button>
+        </h2>
+      </div>
+      <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordionExample">
+        <div class="card-body" id="faq-text">
+          Sometimes the pod will take longer than normal as the algorithm works around Instagram. This is natural and is
+          on purpose as it makes sure that the likes are delivered in the most effective way possible to deliver the biggest impact.
+          <br><br>If your post has been live for over 24 hours though and still there are less than 300 likes then there may be something
+          wrong. <br><br>So simply email georgia@wearethenatureboys.com and she’ll be happy to help!
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-header" id="headingSeven">
+        <h2 class="mb-0">
+          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+            How long does the engagement pod normally take to go live?
+          </button>
+        </h2>
+      </div>
+      <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accordionExample">
+        <div class="card-body" id="faq-text">
+          On average it takes around 7 working days to get the engagement pod live. This depends on the number of people currently queued.
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-header" id="headingEight">
+        <h2 class="mb-0">
+          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
+            Where can I read T&C’s of working with you?
+          </button>
+        </h2>
+      </div>
+      <div id="collapseEight" class="collapse" aria-labelledby="headingEight" data-parent="#accordionExample">
+        <div class="card-body" id="faq-text">
+          Our Terms & Conditions are shown in the footer of our main website. Or simply click here to read them: <br><br> <a href="https://wearethenatureboys.com/terms-conditions-for-nature-boys-services/" target="_blank">Terms & Conditions</a>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-header" id="headingNine">
+        <h2 class="mb-0">
+          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
+            How can I add to or remove subscriptions I'm signed up to?
+          </button>
+        </h2>
+      </div>
+      <div id="collapseNine" class="collapse" aria-labelledby="headingNine" data-parent="#accordionExample">
+        <div class="card-body" id="faq-text">
+          If you’re looking to add a new package or find out more about one, or perhaps unhappy and looking to cancel,
+          you can always email georgia@wearethenatureboys.com. <br><br>Please do give us a good few days at least before your
+          next payment run so that we have the time to spot the email and make that adjustment before the next payment
+          run goes out for you.
+        </div>
+      </div>
+    </div>
+
   </div>
