--- a/sc_app/templates/navbar.html
+++ b/sc_app/templates/navbar.html
@@ -1,14 +1,52 @@
 {% load static %}
-<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-  {% if user.is_authenticated %}
-  <a class="navbar-brand" href="{% url 'dashboard' %}">
-    <img src="{% static "/images/snowballlogotemp2.png" %}" width="auto" height="80" alt="logo">
-  </a>
-  {% else %}
-  <a class="navbar-brand" href="{% url 'login' %}">
-    <img src="{% static "/images/snowballlogotemp2.png" %}" width="auto" height="80" alt="logo">
-  </a>
-  {% endif %}
+<nav class="fixed-top total-navbar">
+  <nav class="navbar navbar-light bg-light">
+    {% if user.is_authenticated %}
+    <a class="navbar-brand mx-auto" href="{% url 'dashboard' %}">
+      <img class="max-width: 80%" src="{% static "/images/snowball_logo_main.png" %}" width="auto" height="75" alt="logo">
+    </a>
+    {% else %}
+    <a class="navbar-brand mx-auto" href="{% url 'login' %}">
+      <img src="{% static "/images/snowball_logo_main.png" %}" width="auto" height="75" alt="logo">
+    </a>
+    {% endif %}
+  </nav>
+  <nav class="nav navbar-expand-lg navbar-light bg-light second-level-navbar">
+    <button class="navbar-toggler mx-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mx-auto">
+        {% if user.is_authenticated %}
+          <li class="nav-item mx-auto">
+            <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
+          </li>
+        {% endif %}
+        <li class="nav-item mx-auto">
+          <a class="nav-link" href="https://wearethenatureboys.com/">Back to main website</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav mx-auto">
+        {% if user.is_authenticated %}
+          <li class="nav-item mx-auto">
+            <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+          </li>
+          <li class="nav-item mx-auto">
+            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+          </li>
+        {% else %}
+          <li class="nav-item mx-auto">
+            <a class="nav-link" href="{% url 'login' %}">Login</a>
+          </li>
+        {% endif %}
+      </ul>
+    </div>
+  </nav>
+</nav>
+
+
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -39,4 +77,4 @@
       {% endif %}
     </ul>
   </div>
-</nav>
+</nav> -->
