--- a/sc_app/static/dashboard/mystyle.css
+++ b/sc_app/static/dashboard/mystyle.css
@@ -3,6 +3,12 @@
 body, html {
   height: 100%;
   margin: 0;
+  font-family: 'Circe Thin';
+  font-family: 'Circe Extra Light';
+  font-family: 'Circe Light';
+  font-family: 'Circe Regular';
+  font-family: 'Circe Bold';
+  font-family: 'Circe Extra Bold';
 }
 
 body {
@@ -32,6 +38,10 @@ h3 {
   text-align: center;
   font-weight: bolder;
   margin: 20px auto 20px auto;
+}
+
+h6 {
+  font-weight: bold;
 }
 
 /* NAVIGATION BAR  */
