Finished off profile

--- a/sc_app/templates/dashboard/dashboard.html
+++ b/sc_app/templates/dashboard/dashboard.html
@@ -34,7 +34,7 @@
     <h3>Subscriptions</h3>
     <table>
       <tr>
-        <th id='subscription-list'>Accounts</th>
+        <th id='subscription-list'>Social Accounts</th>
         <th id='subscription-list'>Services</th>
         <th id='subscription-list'>Value</th>
       </tr>
