--- a/sc_app/users/templates/users/profile.html
+++ b/sc_app/users/templates/users/profile.html
@@ -1,23 +1,22 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
+<h1>Account information for {{ user.username }}</h1>
 <div class="content-section" id="totalpanel">
-  <div class="media">
-    <div class="media-body">
-      <h2 class="account-heading">{{ user.username }}</h2>
-      <p class="text-secondary">{{ user.email }}</p>
+  <div class="container" id="clientdetails">
+    <h3>Edit your account details below</h3>
+    <div id='resourcesandapps'>
+      <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        <fieldset class="form-group">
+          {{ u_form|crispy }}
+          {{ c_form|crispy }}
+        </fieldset>
+        <div class="form-group">
+          <button class="btn btn-outline-info" type="submit" name="button">Update</button>
+        </div>
+      </form>
     </div>
   </div>
-  <form method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    <fieldset class="form-group">
-      <legend class="border-bottom mb-4">Profile info</legend>
-      {{ u_form|crispy }}
-      {{ c_form|crispy }}
-    </fieldset>
-    <div class="form-group">
-      <button class="btn btn-outline-info" type="submit" name="button">Update</button>
-    </div>
-  </form>
 </div>
 {% endblock content %}
