--- a/sc_app/templates/base.html
+++ b/sc_app/templates/base.html
@@ -22,11 +22,14 @@
           </div>
         {% endfor %}
       {% endif %}
-      
+
       {% block content %}
 
-      {% endblock %}
+      {% endblock content %}
     </div>
     {% include 'js.html' %}
   </body>
+  <footer>
+      {% include 'footer.html' %}
+  </footer>
 </html>
