--- a/sc_app/templates/navbar.html
+++ b/sc_app/templates/navbar.html
@@ -26,7 +26,7 @@
         {% endif %}
           <strong>
             <li class="nav-item mx-auto">
-              <a class="nav-link" href="https://wearethenatureboys.com/">Back to main website</a>
+              <a class="nav-link" href="https://wearethenatureboys.com/">Back to Main Website</a>
             </li>
           </strong>
       </ul>
