--- a/sc_app/static/dashboard/mystyle.css
+++ b/sc_app/static/dashboard/mystyle.css
@@ -1,8 +1,6 @@
 /* OVERALL DOCUMENT SECTION */
 
-body, html {
-  height: 100%;
-  margin: 0;
+html {
   font-family: 'Circe Thin';
   font-family: 'Circe Extra Light';
   font-family: 'Circe Light';
@@ -53,6 +51,23 @@ h6 {
 
 .second-level-navbar {
   padding: 5px 0px 5px 0px;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  text-align: center;
+}
+
+.footer p, a {
+  text-align: center;
+  padding: 10px;
+  margin: 0px;
+  color: rgba(0, 0, 0, 0.5);
+  font-weight: bold;
 }
 
 
