Added the folders for the social network images

--- a/sc_app/templates/dashboard/snippets/faq.html
+++ b/sc_app/templates/dashboard/snippets/faq.html
@@ -51,7 +51,7 @@
           Our Instagram centred competitions are focused purely on that one platform where we look to manage
           regular competitions on the platform with the goal of gaining followers. <br><br>The email centred campaigns are
           an upgrade ontop of that where we use Vyper, a viral competition software that allows you to build an email
-          list extremely quickly as well as growing on social media too! You can read more on the two of them here:<br><br> <a href="https://wearethenatureboys.com/organic-social/#competitionpart" target="_blank">Competitions info</a>
+          list extremely quickly as well as growing on social media too! You can read more on the two of them here:<br><br> <a href="https://snowballcreations.com/organic-social/#competitionpart" target="_blank">Competitions info</a>
         </div>
       </div>
     </div>
@@ -134,7 +134,7 @@
       </div>
       <div id="collapseEight" class="collapse" aria-labelledby="headingEight" data-parent="#accordionExample">
         <div class="card-body" id="faq-text">
-          Our Terms & Conditions are shown in the footer of our main website. Or simply click here to read them: <br><br> <a href="https://wearethenatureboys.com/terms-conditions-for-nature-boys-services/" target="_blank">Terms & Conditions</a>
+          Our Terms & Conditions are shown in the footer of our main website. Or simply click here to read them: <br><br> <a href="https://snowballcreations.com/terms-conditions-for-snowball-creations-services/" target="_blank">Terms & Conditions</a>
 
         </div>
       </div>
